@@ -28,6 +28,7 @@ Boston, MA 02111-1307, USA.  */
 
 #include "../config.h"
 #include "12bit-processors.h"
+#include "12bit-instructions.h"
 
 instruction * disasm12 (pic_processor *cpu, unsigned int inst)
 {
