@@ -23,6 +23,9 @@ Boston, MA 02111-1307, USA.  */
 
 #include "interface.h"
 
+class Stimulus;
+class Stimulus_Node;
+
 //---------------------------------------------------------------------------
 //
 //  struct Interface
