@@ -22,6 +22,10 @@ Boston, MA 02111-1307, USA.  */
 #define __IOPORTS_H__
 
 #include "gpsim_classes.h"
+#include "pic-registers.h"
+class IOPORT_TRIS;
+class IOPORT_LATCH;
+class USART_MODULE;
 
 //---------------------------------------------------------
 // IOPORT
